# critterFX

./: .gitignore  README.md  index.html  package-lock.json  package.json  update.json
src/: App.css  App.tsx  index.css  main.tsx  mainOLD.tsx  router.tsx  routerOLD.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Footer.css  Footer.tsx  Layout.tsx  NavBar.css  NavBar.tsx  app-sidebar.tsx  theme-provider.tsx  titlebar.css  titlebar.tsx  updateChecker.tsx
src/components/presets/: PresetManagementDialogs.css  PresetManagementDialogs.tsx
src/components/ui/: dialog.tsx  scroll-area.tsx  sonner.tsx
src/context/: UserContext.tsx
src/data/: presets.ts
src/hooks/: useFavorite.ts
src/lib/: api.ts  supabase.ts  utils.ts
src/pages/About/: About.css  About.tsx
src/pages/Home/: Home.css  Home.tsx  home.css  home.tsx
src/pages/PresetDetail/: PresetDetail.css  PresetDetail.tsx
src/pages/PresetDetailOLD/: PresetDetailOLD.tsx
src/pages/Presets/: Presets.css  Presets.tsx
src/pages/Profile/: Profile.css  Profile.tsx
src/pages/Settings/: Settings.css  Settings.tsx
src/pages/Upload/: Upload.css  Upload.tsx
src/utils/: aePathManager.ts  presetDownloader.ts
